# cityos-javed

./: .env  .gitignore  CITYOS_RUNBOOK.md  deployment-process.md
dakkah-cityos-erpnext/: .env  (+25 more)
dakkah-cityos-erpnext/apps/cityos/: CUSTOMIZATION_GUIDE.md  MANIFEST.in  pyproject.toml  setup.py
dakkah-cityos-erpnext/apps/cityos/cityos/: check_app_permission.py  hooks.py  modules.txt
dakkah-cityos-erpnext/apps/cityos/cityos/assets_management/doctype/maintenance_parts_used/: maintenance_parts_used.json  maintenance_parts_used.py
dakkah-cityos-erpnext/apps/cityos/cityos/assets_management/doctype/maintenance_plan/: maintenance_plan.json  maintenance_plan.py
dakkah-cityos-erpnext/apps/cityos/cityos/assets_management/doctype/municipal_asset/: municipal_asset.json  municipal_asset.py
dakkah-cityos-erpnext/apps/cityos/cityos/compliance/: checks.py
dakkah-cityos-erpnext/apps/cityos/cityos/config/: desktop.py
dakkah-cityos-erpnext/apps/cityos/cityos/domains/: municipal_government.py  smart_city.py
dakkah-cityos-erpnext/apps/cityos/cityos/governance/: audit.py  node_context.py
dakkah-cityos-erpnext/apps/cityos/cityos/integrations/: cms_client.py  medusa_sync.py  outbox.py  payload_sync.py  temporal_sync.py  webhooks.py  workflow_registry.py
dakkah-cityos-erpnext/apps/cityos/cityos/setup/: install.py  seed_data.py
dakkah-cityos-erpnext/apps/cityos/cityos/tests/: conftest.py  test_business_logic.py  test_compliance.py  test_doctypes.py  test_governance.py  test_integrations.py  test_node_context.py  test_outbox.py  test_temporal_workflows.py  test_webhooks.py
(+442 files in other folders)
