[project]
name = "cityos"
authors = [
    { name = "Dakkah CityOS", email = "dev@dakkah.io" }
]
description = "Dakkah CityOS ERP Extension - Municipal Government & Smart City Operations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "mt940>=0.7.0",
    "cryptography>=46.0.5",
    "pillow>=12.1.1",
    "pyOpenSSL>=25.3.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
